changes on the html file only

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1>Hello i Abdelkader Elhamdi weld elHawamed</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dignissimos
+      nesciunt dolor sunt, quisquam accusamus similique unde, cupiditate earum
+      perferendis voluptatem id facere expedita! Consectetur repellendus odit
+      nostrum atque illum.
+    </p>
     <script src="app.js"></script>
   </body>
 </html>
